--- a/docs/jamesdocs.tex
+++ b/docs/jamesdocs.tex
@@ -241,36 +241,36 @@ The following table lists the measures per design-form combination.
 Design & Side & Measure & Description\tabularnewline
 \midrule
 \endhead
-A & A & hdc & Head circumference by age, 0-15 mo\tabularnewline
-& & hgt & Length by age, 0-15 mo\tabularnewline
-& & wgt & Weight by age, 0-15 mo\tabularnewline
+A & A & \texttt{hdc} & Head circumference by age, 0-15 mo\tabularnewline
+& & \texttt{hgt} & Length by age, 0-15 mo\tabularnewline
+& & \texttt{wgt} & Weight by age, 0-15 mo\tabularnewline
 & B & &\tabularnewline
-& H & hgt & Length by age, 0-15 mo\tabularnewline
-& O & hdc & Head circumference by age, 0-15 mo\tabularnewline
-& W & wgt & Weight by age, 0-15 mo\tabularnewline
-B & A & wfh & Weight for height, 0-4 yr\tabularnewline
-& & hgt & Length by age, 0-4 yr\tabularnewline
-& B & hdc & Head circumference by age, 0-4 yr\tabularnewline
+& H & \texttt{hgt} & Length by age, 0-15 mo\tabularnewline
+& O & \texttt{hdc} & Head circumference by age, 0-15 mo\tabularnewline
+& W & \texttt{wgt} & Weight by age, 0-15 mo\tabularnewline
+B & A & \texttt{wfh} & Weight for height, 0-4 yr\tabularnewline
+& & \texttt{hgt} & Length by age, 0-4 yr\tabularnewline
+& B & \texttt{hdc} & Head circumference by age, 0-4 yr\tabularnewline
 & C & &\tabularnewline
-& H & hgt & Height by age, 0-4 yr\tabularnewline
-& O & hdc & Head circumference by age, 0-4 yr\tabularnewline
-& R & wfh & Weight for height, 0-4 yr\tabularnewline
-& W & wgt & Weight by age, 0-4 yr\tabularnewline
-C & A & wfh & Weight for height, 1-21 yr\tabularnewline
-& & hgt & height by age, 1-21 yr\tabularnewline
-& B & bmi & BMI by age, 1-21 yr\tabularnewline
-& & hdc & Head circumference by age, 1-21 yr\tabularnewline
-& C & bmi & BMI by age, 1-21 yr\tabularnewline
-& H & hgt & Height by age, 1-21 yr\tabularnewline
-& O & hdc & Head circumference by age, 1-21 yr\tabularnewline
-& Q & bmi & Body mass index by age, 1-21 yr\tabularnewline
-& R & wfh & Weight for height, 1-21 yr\tabularnewline
-E & A & wgt & Weight by age, 0-4 yr\tabularnewline
-& & hgt & height by age, 0-4 yr\tabularnewline
-& B & hdc & Head circumference by age, 0-4 yr\tabularnewline
-& H & hgt & Height by age, 0-4 yr\tabularnewline
-& O & hdc & Head circumference by age, 0-4 yr\tabularnewline
-& W & wgt & Weight by age, 0-4 yr\tabularnewline
+& H & \texttt{hgt} & Height by age, 0-4 yr\tabularnewline
+& O & \texttt{hdc} & Head circumference by age, 0-4 yr\tabularnewline
+& R & \texttt{wfh} & Weight for height, 0-4 yr\tabularnewline
+& W & \texttt{wgt} & Weight by age, 0-4 yr\tabularnewline
+C & A & \texttt{wfh} & Weight for height, 1-21 yr\tabularnewline
+& & \texttt{hgt} & height by age, 1-21 yr\tabularnewline
+& B & \texttt{bmi} & BMI by age, 1-21 yr\tabularnewline
+& & \texttt{hdc} & Head circumference by age, 1-21 yr\tabularnewline
+& C & \texttt{bmi} & BMI by age, 1-21 yr\tabularnewline
+& H & \texttt{hgt} & Height by age, 1-21 yr\tabularnewline
+& O & \texttt{hdc} & Head circumference by age, 1-21 yr\tabularnewline
+& Q & \texttt{bmi} & Body mass index by age, 1-21 yr\tabularnewline
+& R & \texttt{wfh} & Weight for height, 1-21 yr\tabularnewline
+E & A & \texttt{wgt} & Weight by age, 0-4 yr\tabularnewline
+& & \texttt{hgt} & height by age, 0-4 yr\tabularnewline
+& B & \texttt{hdc} & Head circumference by age, 0-4 yr\tabularnewline
+& H & \texttt{hgt} & Height by age, 0-4 yr\tabularnewline
+& O & \texttt{hdc} & Head circumference by age, 0-4 yr\tabularnewline
+& W & \texttt{wgt} & Weight by age, 0-4 yr\tabularnewline
 \bottomrule
 \end{longtable}
 
